# github-ci-cd

./: .gitignore  README.MD  README.md  coverage.xml  index.html  playbook.yml  pyproject.toml  remote_file.txt  requirements.txt  setup.cfg  shubham.txt  test.yml  test_functionality.py  userguide.md
.github/: deploy-pipeline.yaml
.github/workflows/: aunt_with-json.yml  aws_workflow.yml  aws_workflow_new.yml  blank.yml  deploy-pipeline.yaml  google.yml  lambda.yml  main.yml  workflow.yml
function/: lambda_function.py  requirements.txt
src/calculator/: __init__.py  operations.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_operations.py
