[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "1.0.0"
description = "A simple calculator package"
authors = [{name = "shubhma", email = "shubham.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]