[metadata]
name = calculator
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = A simple calculator package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
ignore = F401